EKS/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasky-mongodb
spec:
  selector:
    app: tasky-mongodb
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
