EKS/ingress.yaml
# This file contains the configuration for an AWS Application Load Balancer (ALB) Ingress resource in Kubernetes.
# It defines the rules for routing HTTP traffic to a service named "tasky-mongodb" running in the cluster.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasky-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tasky-mongodb
            port:
              number: 80
